--- a/projects/00-hola-mundo/src/App.css
+++ b/projects/00-hola-mundo/src/App.css
@@ -38,14 +38,37 @@
     transition: .3s ease background-color;
 }
 
+.tw-followCard-text {
+    display: block;
+}
+
 .tw-followCard-button.is-following {
-    border: 1px solid red;
+    border: 1px solid #bbb;
+    background: transparent;
+    color: #fff;
+    width: 140px;
 }
 
 .tw-followCard-button:hover {
-    background-color: #09f;
+    opacity: .8;
 }
 
 .tw-followCard-button.is-following:hover {
-    background: red;
+    background-color: rgba(255, 0, 0, 0.178);
+    color: red;
+    border: 1px solid red;
+    transition: .3s ease all;
+}
+
+.tw-followcard-stopFollow {
+    display: none;
+}
+
+.tw-followCard-button.is-following:hover .tw-followcard-text{
+    display: none;
+}
+
+
+.tw-followCard-button.is-following:hover .tw-followcard-stopFollow{
+    display: block;
 }
